# mk-brain

./: .gitignore  README.md  pyproject.toml
brain/: models.py
brain/connectors/: base.py  obsidian.py
brain/core/: ingest.py  search.py
brain/mcp_server/: server.py  tools.py
brain/store/: db.py  queries.py  schema.sql
cli/: ingest.py  serve.py
docs/superpowers/plans/: 2026-06-18-second-brain-mvp.md
docs/superpowers/specs/: 2026-06-17-second-brain-mvp-design.md
tests/: conftest.py  test_cli_ingest.py  test_models.py  test_stdio.py
tests/connectors/: test_base.py  test_obsidian.py
tests/core/: test_ingest.py  test_search.py
tests/fixtures/vault/: code_fence_tag.md  empty_frontmatter.md  malformed.md  note1.md
tests/fixtures/vault/.obsidian/: ignored.md
tests/mcp_server/: test_server.py  test_tools.py
tests/store/: test_db.py  test_queries.py
